fixed squished name on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,6 @@ span.highlight { background-color: #ffffd0; }
   padding: 40px 0;
 }
 
-/* === Paper teaser images === */
-
 .teaser-image {
   float: left;
   margin-right: 15px;
@@ -114,7 +112,6 @@ span.highlight { background-color: #ffffd0; }
   border-radius: 12px;
   object-fit: cover;
 }
-
 
 .content-container {
   display: flex;
@@ -206,20 +203,12 @@ span.highlight { background-color: #ffffd0; }
     padding: 20px 15px; 
   }
 
-  .content-container {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
-    margin: 0;
-    padding: 0;
-  }
-
   .sidebar {
     display: none; 
   }
   .content-container {
-    flex-direction: column;
     align-items: flex-start;
+    display:block;
     gap: 10px;        
     padding: 0 10px;     
   }
